# civicsetu

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  e2e_embedder_swap.txt  e2e_results.json  e2e_results_post_fix.txt  pyproject.toml  run_server.py
docs/: HLD.md  LLD.md  RAG.md
docs/adr/: 001-three-store-architecture.md  002-section-boundary-chunking.md  003-langgraph-over-langchain.md  004-multi-format-chunker.md  005-document-registry.md
eval/: golden_dataset.jsonl
frontend/: .env.production  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BottomNavBar.tsx  ChatThread.tsx  CitationsPanel.tsx  ConfidenceBadge.tsx  Header.tsx  InputBar.tsx  MessageBubble.tsx  MobileDrawer.tsx  ThemeProvider.tsx
frontend/src/components/graph/: ContextPill.tsx  (+5 more)
frontend/src/hooks/: useChat.ts  useGraphExplorer.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
infra/: docker-compose.yml
infra/init/: init.sql
scripts/: ingest.py  ingest_phase0.py  ingest_phase2.py  ingest_phase4.py  ingest_phase5.py  ingest_phase6.py  run_eval.py  score_reranker.py  seed_phase3.py  test_e2e_queries.py
src/civicsetu/: __init__.py
src/civicsetu/agent/: edges.py  graph.py  nodes.py  state.py
src/civicsetu/api/: main.py
src/civicsetu/config/: document_registry.py  settings.py
src/civicsetu/evaluation/: ragas_eval.py
src/civicsetu/guardrails/: input_guard.py  output_guard.py
src/civicsetu/ingestion/: chunker.py  downloader.py  embedder.py  graph_seeder.py  metadata_extractor.py  parser.py  pipeline.py
src/civicsetu/models/: enums.py  schemas.py
src/civicsetu/prompts/: classifier.py  generator.py  validator.py
src/civicsetu/retrieval/: __init__.py  cache.py  graph_retriever.py  reranker.py  vector_retriever.py
src/civicsetu/stores/: graph_store.py  relational_store.py  vector_store.py
tests/: conftest.py
tests/unit/: test_run_eval.py
tests/unit/agent/: test_edges.py  test_multi_turn.py  test_nodes.py
tests/unit/api/: test_query_route.py
tests/unit/guardrails/: test_guardrails.py
tests/unit/ingestion/: test_metadata_extractor.py
tests/unit/retrieval/: test_cache.py  test_embedding_cache.py  test_graph_cache.py  test_reranker.py  test_vector_retriever.py
tests/unit/stores/: test_vector_store_cache.py
(+5 files in other folders)
